match blog body color with comment color

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -36,7 +36,7 @@
         </div>
 
         <!-- BLOG BODY TEXT-->
-        <p id="blog-body-{{blog._id}}" class="bg-light rounded p-2 card-text text-justify mt-3" data-blog-id={{blog._id}}>{{blog.body}}</p>
+        <p id="blog-body-{{blog._id}}" class="blog-background-color rounded p-2 card-text text-justify mt-3" data-blog-id={{blog._id}}>{{blog.body}}</p>
 
         <!-- BLOG UPDATE/DELETE FORMS START -->
         <div class="my-1">
